Changed Boolean constructor to static valueOf